- fix unwrapped label (#33243)

Version 10.4.191 - 5 September 2007, by Thierry Vignaud

- "choose desktop" step:
  o put images along labels in RadioButtons (HIG)
- summary screen:
  o add spacing around separators
  o fix not displaying the security group
- drop support for iiimf
- update bootloader & updates banner icons

Version 10.4.190 - 5 September 2007, by Thierry Vignaud

- display a warning when capslock is enabled and entering a password (#33028)
- fix insmoding raid0 (#33172)

Version 10.4.189 - 4 September 2007, by Thierry Vignaud

- summary screen:
  o add spacing between elements
  o add an horizontal bar between elements

Version 10.4.188 - 4 September 2007, by Thierry Vignaud

- hardware detection layer:
  o add support for tape device again (#31073)
  o enumerate generic SCSI devices again
- enumerate generic SCSI devices again

Version 10.4.187- 4 September 2007, by Pascal "Pixel" Rigaux

- bugfix: add desktop-Custom.png to tarball
- add global variable settable via "use_uuid" on kernel cmdline

Version 10.4.185 - 4 September 2007, by Pascal "Pixel" Rigaux

- fix gnome choice in "choose desktop" step (#33101)

Version 10.4.184 - 3 September 2007, by Thierry Vignaud

- support for UUID (including UUID=xxx in fstab)
- do not set relatime option for mounting nfs
- nicely adjust mtime of fontconfig cache files
- steps window: do not underline categories (Installation, Configuration)
- nicer "choose desktop" step with icons

Version 10.4.183 - 31 August 2007, by Pascal "Pixel" Rigaux

- add new step "choose desktop", before or hiding "choose groups"
- bootloader-config
  o handle new naming of vmlinuz flavors: vmlinuz-<version>-<flavor>-Xmdv
    instead of vmlinuz-<version>-Xmdv<flavor>
  o always use "linux" short name instead of "linux-<flavor>"
    (since the long name is quite nice nowadays)

Version 10.4.182 - 30 August 2007, by Thierry Vignaud

- enable snd-ac97-codec power_save=1 option if installed on laptop (#32213)