@@ -87,9 +87,9 @@ if_(arch() =~ /ppc/,
   0x16 => '',         'Hidden FAT16',
   0x17 => 'ntfs',     'Hidden HPFS/NTFS',
   0x18 => '',         'AST SmartSleep',
-  0x1b => 'vfat',     'Hidden W95 FAT32',
-  0x1c => 'vfat',     'Hidden W95 FAT32 (LBA)',
-  0x1e => 'vfat',     'Hidden W95 FAT16 (LBA)',
+  0x1b => 'vfat',     'Hidden W95 FAT32',       # \ 
+  0x1c => 'vfat',     'Hidden W95 FAT32 (LBA)', #  > don't change label, it's used to know if it's not a boot partition in bootloader.pm
+  0x1e => 'vfat',     'Hidden W95 FAT16 (LBA)', # /
   0x24 => '',         'NEC DOS',
   0x39 => '',         'Plan 9',
   0x3c => '',         'PartitionMagic recovery',
