@@ -1,3 +1,4 @@
+- do not configure "windows" bootloader entries for "hidden" partitions
 - fix unwrapped label (#33243)
 
 Version 10.4.191 - 5 September 2007, by Thierry Vignaud
